--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                                     </div>
                                 </div>
                                 <div class="item">
-                                    <img src="images/slider3.JPG" alt="...">
+                                    <img src="images/slider3.jpg" alt="...">
                                     <div class="carousel-caption">
                                         
                                     </div>
