--- a/index.html
+++ b/index.html
@@ -219,9 +219,9 @@
                     <p class="desc-text">🌟 ช้อปเสื้อผ้าแฟชั่นราคาถูกที่นี่! 🌟 พบกับชุดเดรสสุดเก๋และแฟชั่นอื่นๆ ที่อัปเดตทุกเดือน พร้อมโปรพิเศษลดราคาให้คุณเลือกช็อปได้ไม่อั้น! สวยในงบประหยัด แค่คลิกเดียวก็สั่งซื้อได้ทันที ไม่พลาดเทรนด์ฮิต! 🛍️✨</p>
                 </div>
                 <div class="col-md-6">
-                    <img src="images/bread1.jpg" width="260" alt="Bread">
+                    <img src="images/slider1.jpg" width="260" alt="Bread">
                     <img src="images/corn1.jpg" width="260" alt="Bread">
-                    <img src="images/bread2.jpg" width="260" alt="Bread">
+                    <img src="images/slider3.jpg" width="260" alt="Bread">
                 </div>
             </div>
         </section>
