--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                 </div>
                 <div class="col-md-6">
                     <img src="images/slider1.jpg" width="260" alt="Bread">
-                    <img src="images/corn1.jpg" width="260" alt="Bread">
+                    <img src="images/slider2.jpg" width="260" alt="Bread">
                     <img src="images/slider3.jpg" width="260" alt="Bread">
                 </div>
             </div>
