--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
             <div class="follow_container">
                 <div class="col-md-6 col-md-offset-3">
                     <h2 class="white second-title">" S-Shop Fashion "</h2><br>
-                    <h2 class="top-title x">! 45฿ ทุกตัว ทั้งร้าน</h2>
-                    <h2 class="white second-title">" โปร เหมา ๆ 10ชิ้น 400฿  "</h2>
+                    <h2 class="top-title x">! 30฿ ทุกตัว ทั้งร้าน</h2>
+                    <h2 class="white second-title">" โปรเหมา ยกกระสอบ ลดพิเศษ "</h2>
                     <hr>
                 </div>
             </div>
