--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
        <section id ="pricing" class="description_content">
         <div class="pricing background_content neon-text">
-           <h1><span>!ย้ำ ทั้งร้าน ทุกตัว</span> 45฿ </h1>
+           <h1><span>!ย้ำ ทั้งร้าน ทุกตัว</span> 30฿ </h1>
         </div>
        <div class="text-content container"> 
            <div class="container">
@@ -199,7 +199,7 @@
                 <div class="col-md-6 col-md-offset-1">
                     <h1>โปรลดราคา</h1>
                     <div class="fa fa-shopping-cart fa-2x"></div>
-                    <p class="desc-text">✨โปร เหมาๆ 🎉 โปรสุดคุ้ม! ขายทุกชิ้นเพียง 45 บาท✨ ซื้อ 10 ชิ้นในราคาแค่ 400 บาทเท่านั้น! 😍 และยังมีบริการจัดส่งฟรี (สอบถามรายละเอียดเพิ่มเติมกับแอดมินร้านได้เลย) 🚚💨 อย่าพลาดโอกาสนี้นะคะ!</p>
+                    <p class="desc-text">✨โปร เหมาๆ 🎉 โปรสุดคุ้ม! ขายทุกชิ้นเพียง 30 บาท✨ ซื้อ 10 ชิ้นในราคาพิเศษ! 😍 และยังมีบริการจัดส่งฟรี (สอบถามรายละเอียดเพิ่มเติมกับแอดมินร้านได้เลย) 🚚💨 อย่าพลาดโอกาสนี้นะคะ!</p>
                 </div>
             </div>
         </section>
@@ -355,7 +355,7 @@
                     <ul class="social_icons">
                         <li><a class="fa fa-facebook color_animation" href="#" target="_blank"></a></li>
                         <li><a class="icon-twitter color_animation" href="#" target="_blank"></a></li>                        
-                        <li><a class="icon-linkedin color_animation" href="#" target="_blank"></a></li>
+                        <li><a class="icon-linkedin color_animation" href="https://lin.ee/kQA3Nby" target="_blank"></a></li>
                         <li><a class="icon-mail color_animation" href="#"></a></li>
                         
                     </ul>
