--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
 
         <!-- ============ Contact Section  ============= -->
 
-        <section id="contact">
+      <section id="contact">
             
             <div class="container">
                 <div class="row">
@@ -426,5 +426,11 @@
         <script type="text/javascript" src="js/jquery.mixitup.min.js" ></script>
         <script type="text/javascript" src="js/main.js" ></script>
         <script src="script.js" ></script>
+        <script>
+            function redirectToLink() {
+    window.location.href = "https://mapayda.github.io/userplay/";
+  }
+        </script>
+        
     </body>
 </html>
